editAuth